[package]
name = "rtcoin-server"
version = "0.1.0"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"

[dependencies]
#bcrypt = "0.5"
chrono = "0.4"
ctrlc = "3.1"
hmac = "0.7"
#simplelog = "0.6"
rand = "0.7"
rust-crypto = "0.2"
ryu = "1.0"
sha2 = "0.8"
zeroize = "0.9"

[dependencies.rusqlite]
version = "0.19"
default-features = true
features = ["sqlcipher"]
