[package]
name = "rtcoin-server"
version = "0.1.0"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"

[dependencies]
bcrypt = "^0.5"
chrono = "^0.4"
ctrlc = "^3.1"
log = "^0.4"
merkle = "^1.11"
num_cpus = "^1.10"
ring = "^0.16"
rpassword = "^3.0"
simplelog = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
threadpool = "^1.7"
zeroize = "^0.9"

[dependencies.rusqlite]
version = "^0.19"
default-features = true
features = ["sqlcipher"]
